--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,9 @@
                   <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i> </a>
         <a href="https://scholar.google.com/citations?user=maIxQRMAAAAJ" target="_blank" rel="external" style="padding-left:10px;">
                   <i class="ai ai-google-scholar-square ai-2x" aria-hidden="true"></i> </a>
+        <a href="https://drive.google.com/file/d/18Ohjipl4VDZeniXjMQz2wl4jAJJoV7AZ/view" target="_blank" rel="external" style="padding-left:10px;">
+                  <i class="ai ai-cv ai-4x" aria-hidden="true"></i> </a>
+        
         
         {% if site.github.is_project_page %}
           <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ github_name }}</small></a></p>
